# Copyright 2017 LINE Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("node_stellite") {
  sources = [
    "base/message_pump_node.cc",
    "base/message_pump_node.h",
    "node_http_fetcher.cc",
    "node_http_fetcher.h",
    "node_http_fetcher_wrap.cc",
    "node_http_fetcher_wrap.h",
    "node_message_pump_manager.cc",
    "node_message_pump_manager.h",
    "node_module.cc",
    "node_quic_alarm_factory.cc",
    "node_quic_alarm_factory.h",
    "node_quic_dispatcher.cc",
    "node_quic_dispatcher.h",
    "node_quic_server.cc",
    "node_quic_server.h",
    "node_quic_server_packet_writer.cc",
    "node_quic_server_packet_writer.h",
    "node_quic_server_session.cc",
    "node_quic_server_session.h",
    "node_quic_server_stream.cc",
    "node_quic_server_stream.h",
    "node_quic_server_stream_wrap.cc",
    "node_quic_server_stream_wrap.h",
    "node_quic_server_wrap.cc",
    "node_quic_server_wrap.h",
    "socket/udp_server.cc",
    "socket/udp_server.h",
    "socket/udp_socket.cc",
    "socket/udp_socket.h",
    "v8/converter.cc",
    "v8/converter.h",
  ]

  deps = [
    "//base",
    "//net",
    "//net:simple_quic_tools",
    "//stellite:stellite",
  ]
}
